Fixed style on mobile navigation view

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -3380,13 +3380,14 @@ nav a:hover {
 }
 
 .nav-menu.nav-menu-social>li {
-    text-align: center;
+    text-align: left;
     float: none;
     border: none !important
 }
 
-.navigation-portrait .nav-menu.nav-menu-social>li {
-    width: auto
+.navigation-portrait .nav-menu.nav-menu-social>li:last-child {
+    /* width: auto */
+    margin-left: 20px;
 }
 
 .nav-menu.nav-menu-social>li>a>[class*=ion-] {
